--- a/bestboost/profile-edit.html
+++ b/bestboost/profile-edit.html
@@ -60,15 +60,15 @@
 					</div>
 				</div>
 				<ul class="menu">
-	<li><a href="/">Home</a></li>
-	<li><a href="#">Buy Boost</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="buy-boost.html">Buy Boost</a></li>
 	<li><a href="#">FAQ</a></li>
 </ul>
 				<!--log out-->
 
 				<div class="topButtons_wrapper">
 	<button class="button buttonLogin main"><span>Sign In</span></button>
-	<a href="/registration.html" class="button accent"><span>Join Up</span></a>
+	<a href="registration.html" class="button accent"><span>Join Up</span></a>
 </div>
 <!--log in-->
 <!-- <div class="user_wrapper">
@@ -141,14 +141,14 @@
 				<div class="col-xxl-9 col-xl-10 col-4">
 					<div class="menu_wrapper">
 						<ul class="menu">
-	<li><a href="/">Home</a></li>
-	<li><a href="#">Buy Boost</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="buy-boost.html">Buy Boost</a></li>
 	<li><a href="#">FAQ</a></li>
 </ul>
 						<!--log out-->
 						<div class="topButtons_wrapper">
 	<button class="button buttonLogin main"><span>Sign In</span></button>
-	<a href="/registration.html" class="button accent"><span>Join Up</span></a>
+	<a href="registration.html" class="button accent"><span>Join Up</span></a>
 </div>
 <!--log in-->
 <!-- <div class="user_wrapper">
