--- a/invoice/document.html
+++ b/invoice/document.html
@@ -129,16 +129,16 @@
 												מסמכים
 											</span>
 											<ul class="dropDownWrapper_list">
-												<li><a href="/">מסמכים</a></li>
-												<li><a href="/">חשבונית מס</a></li>
-												<li><a href="/">קבלה</a></li>
-												<li><a href="/">חשבונית מס / קבלה</a></li>
-												<li><a href="/">חשבונית מס זיכוי</a></li>
-												<li><a href="/">חשבון עסקה</a></li>
-												<li><a href="/">הזמנת עבודה</a></li>
-												<li><a href="/">הצעת מחיר</a></li>
-												<li><a href="/">תעודת החזרה</a></li>
-												<li><a href="/">חשבונית עבור קבלה</a></li>
+												<li><a href="./document.html">מסמכים</a></li>
+												<li><a href="./document.html">חשבונית מס</a></li>
+												<li><a href="./document.html">קבלה</a></li>
+												<li><a href="./document.html">חשבונית מס / קבלה</a></li>
+												<li><a href="./document.html">חשבונית מס זיכוי</a></li>
+												<li><a href="./document.html">חשבון עסקה</a></li>
+												<li><a href="./document.html">הזמנת עבודה</a></li>
+												<li><a href="./document.html">הצעת מחיר</a></li>
+												<li><a href="./document.html">תעודת החזרה</a></li>
+												<li><a href="./document.html">חשבונית עבור קבלה</a></li>
 											</ul>
 										</li>
 										<li class="dropDownWrapper">
@@ -440,6 +440,7 @@
 															<span>מטבע</span>
 															<select class="documentData_select">
 																<option value='ש"ח'>ש"ח</option>
+																<option value='דולרים'>דולרים</option>
 															</select>
 														</label>
 
