--- a/invoice/document.html
+++ b/invoice/document.html
@@ -66,7 +66,7 @@
 					<div class="mainContent">
 						<div class="mainContent_topLine d-flex justify-content-between">
 							<div class="topLine_start d-flex align-items-center">
-								<a href="/" class="logo"><img src="./img/content/mainLogo.svg" alt="שם אתר"></a>
+								<a href="https://evheniynahola.github.io/invoice/" class="logo"><img src="./img/content/mainLogo.svg" alt="שם אתר"></a>
 								<form class="searchForm">
 									<label class="inputWrapper searchField">
 										<span class="searchButton"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_search"/></svg></span>
@@ -488,7 +488,7 @@
 					<p>
 						אין לכם מודול סליקת כרטיסי אשראי ICREDIT.
 על מנת לחייב לקוחות באשראי ישירות מתוך המסמך, נדרש להפעיל את המודול.
- - למידע נוסף והצטרפות <a href="/">לחצו</a> 
+ - למידע נוסף והצטרפות <a href="https://evheniynahola.github.io/invoice/">לחצו</a> 
 					</p>
 				</div>
 			</div>
