--- a/invoice/index.html
+++ b/invoice/index.html
@@ -65,7 +65,7 @@
 					<div class="mainContent">
 						<div class="mainContent_topLine d-flex justify-content-between">
 							<div class="topLine_start d-flex align-items-center">
-								<a href="/" class="logo"><img src="./img/content/mainLogo.svg" alt="שם אתר"></a>
+								<a href="https://evheniynahola.github.io/invoice/" class="logo"><img src="./img/content/mainLogo.svg" alt="שם אתר"></a>
 								<form class="searchForm">
 									<label class="inputWrapper searchField">
 										<span class="searchButton"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_search"/></svg></span>
@@ -78,16 +78,16 @@
 									</div>
 									<!-- listActive - activate menu -->
 									<ul class="documentAdd_list">
-										<li><a href="/">חשבונית מס</a></li>
-										<li><a href="/">קבלה</a></li>
-										<li><a href="/">חשבונית מס / קבלה</a></li>
-										<li><a href="/">חשבונית מס זיכוי</a></li>
-										<li><a href="/">חשבון עסקה</a></li>
-										<li><a href="/">הזמנת עבודה</a></li>
-										<li><a href="/">הצעת מחיר</a></li>
-										<li><a href="/">תעודת משלוח</a></li>
-										<li><a href="/">תעודת החזרה</a></li>
-										<li><a href="/">חשבונית עבור קבלה</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">חשבונית מס</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">קבלה</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">חשבונית מס / קבלה</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">חשבונית מס זיכוי</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">חשבון עסקה</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">הזמנת עבודה</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">הצעת מחיר</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">תעודת משלוח</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">תעודת החזרה</a></li>
+										<li><a href="https://evheniynahola.github.io/invoice/">חשבונית עבור קבלה</a></li>
 									</ul>
 								</div>
 							</div>
@@ -673,7 +673,7 @@
 					<p>
 						אין לכם מודול סליקת כרטיסי אשראי ICREDIT.
 על מנת לחייב לקוחות באשראי ישירות מתוך המסמך, נדרש להפעיל את המודול.
- - למידע נוסף והצטרפות <a href="">לחצו</a> 
+ - למידע נוסף והצטרפות <a href="https://evheniynahola.github.io/invoice/">לחצו</a> 
 					</p>
 				</div>
 			</div>
