--- a/invoice/index.html
+++ b/invoice/index.html
@@ -222,7 +222,7 @@
 														<th>
 															<div class="tableInvoiceList_controlsWrapper d-flex">
 																<div class="tableInvoiceList_controlsTitle">
-																	סוג המסמך
+																	שם הלקוח
 																</div>
 																<div class="tableInvoiceList_controls">
 																	<span class="controlGroup_upChange">
@@ -237,7 +237,7 @@
 														<th>
 															<div class="tableInvoiceList_controlsWrapper d-flex">
 																<div class="tableInvoiceList_controlsTitle">
-																	תאריך התחלה
+																	תאריך הפקה
 																</div>
 																<div class="tableInvoiceList_controls">
 																	<span class="controlGroup_upChange">
@@ -267,7 +267,7 @@
 														<th>
 															<div class="tableInvoiceList_controlsWrapper d-flex">
 																<div class="tableInvoiceList_controlsTitle">
-																	מחיר
+																	סכום
 																</div>
 																<div class="tableInvoiceList_controls">
 																	<span class="controlGroup_upChange">
@@ -282,7 +282,7 @@
 														<th>
 															<div class="tableInvoiceList_controlsWrapper d-flex">
 																<div class="tableInvoiceList_controlsTitle">
-																	מַטְבֵּעַ
+																	מטבע
 																</div>
 																<div class="tableInvoiceList_controls">
 																	<span class="controlGroup_upChange">
