--- a/invoice/index.html
+++ b/invoice/index.html
@@ -106,15 +106,15 @@
 									<div class="userMain_avatar">
 										<img src="./img/users/photo1.png" alt="user avatar">
 									</div>
-									<div class="userMain_control d-flex">
+									<div class="userMain_control d-flex align-items-center">
 										<div class="userMain_name">שם עסק</div>
-										<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_chevronDrop"/></svg>
+										<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_exit"/></svg>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-2">
+							<div class="col-2 sidebarMin">
 								<div class="mainContent_sidebar">
 									<ul class="mainContent_sidebarMenu">
 										<li>
@@ -160,8 +160,38 @@
 										</li>
 									</ul>
 								</div>
+
+								<div class="mainContent_sidebar mainContent_sidebar_min hidden">
+									<ul class="mainContent_sidebarMenu mainContent_sidebarMenu_min">
+										<li>
+											<span>
+												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_chart"/></svg>
+											</span>
+										</li>
+										<li class="dropDownWrapper">
+											<span>
+												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_fileDocument"/></svg>
+											</span>
+										</li>
+										<li class="dropDownWrapper">
+											<span>
+												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_suitcase"/></svg>
+											</span>
+										</li>
+										<li class="dropDownWrapper">
+											<span>
+												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_usersGroup"/></svg>
+											</span>
+										</li>
+										<li>
+											<span>
+												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_chartPie"/></svg>
+											</span>
+										</li>
+									</ul>
+								</div>
 							</div>
-							<div class="col-10">
+							<div class="col">
 								<div class="mainContent_wrapper">
 									<div class="mainContent_topInterface d-flex justify-content-between align-items-center">
 										<div class="mainContent_documentsInfo">
@@ -175,7 +205,7 @@
 											<li>
 												<a href="#"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoMix" xlink:href="#ico_pdf2"/></svg></a>
 											</li>
-											<li class="active">
+											<li class="">
 												<a href="#"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_envelope"/></svg></a>
 											</li>
 											<li>
@@ -795,7 +825,9 @@
 	<path d="M17.3804 14.8599H18.2404" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </symbol>
 
-
+<symbol id="ico_exit" viewBox="0 0 24 24">
+	<path d="M12 15L9 12M9 12L12 9M9 12L20 12M20 17C20 17.9319 20 18.3978 19.8478 18.7654C19.6448 19.2554 19.2552 19.6448 18.7651 19.8478C18.3976 20 17.9319 20 17 20H7.2C6.07989 20 5.52004 20 5.09221 19.782C4.71589 19.5902 4.40952 19.2844 4.21777 18.908C3.99979 18.4802 4 17.9201 4 16.8V7.19995C4 6.07985 3.99979 5.51986 4.21777 5.09204C4.40952 4.71572 4.71589 4.40973 5.09221 4.21799C5.52004 4 6.07989 4 7.2 4H17C17.9319 4 18.3976 4 18.7651 4.15224C19.2552 4.35523 19.6448 4.74456 19.8478 5.23462C20 5.60216 20 6.0681 20 6.99999" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</symbol>
 
 </svg>
 <script src="js/scripts.min.js"></script>
