--- a/invoice/document.html
+++ b/invoice/document.html
@@ -480,7 +480,10 @@
 														<label class="documentData_currency d-flex align-items-center justify-content-between">
 															<span>מע"מ</span>
 															<select class="documentData_select">
-																<option value='כולל מע"מ'>כולל מע"מ</option>
+																<option value=''>כולל מע"מ</option>
+																<option value="1">ללא מע"מ</option>
+																<option value="2">כולל מע"מ</option>
+																<option value="3">ללא מע"מ</option>
 															</select>
 														</label>
 
