--- a/invoice/index.html
+++ b/invoice/index.html
@@ -36,7 +36,9 @@
 						<div class="mainSidebar_body">
 							<div class="mainSidebar_body_start">
 								<div class="mainSidebar_menuButton">
-									<button></button>
+									<button>
+										<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_hamburger"/></svg>
+									</button>
 								</div>
 
 								<ul class="mainSidebar_addMenu">
@@ -1294,6 +1296,10 @@
 
 <symbol id="ico_successCheck" viewBox="0 0 24 24">
 	<path d="M15 10L11 14L9 12M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z" stroke="#0C870A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</symbol>
+
+<symbol id="ico_hamburger" viewBox="0 0 24 24">
+	<path d="M5 17H19M5 12H19M5 7H19" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </symbol>
 
 </svg>
