--- a/invoice/document.html
+++ b/invoice/document.html
@@ -552,7 +552,7 @@
 	</div>
 
 <!-- modal_active - display flex -->
-<div class="modal">
+<div class="modal modal_info">
 	<div class="modal_body">
 		<div class="modal_head">
 			<div class="modal_close">
